2014-08-18  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r172741.
        https://bugs.webkit.org/show_bug.cgi?id=136058

        This change is breaking PLT. (Requested by mlam on #webkit).

        Reverted changeset:

        "REGRESSION(r172401): for-in optimization no longer works at
        all"
        https://bugs.webkit.org/show_bug.cgi?id=136056
        http://trac.webkit.org/changeset/172741

2014-08-18  Filip Pizlo  <fpizlo@apple.com>

        REGRESSION(r172401): for-in optimization no longer works at all
        https://bugs.webkit.org/show_bug.cgi?id=136056

        Reviewed by Mark Hahnenberg.
        
        This is a partial roll-out of r172401. It turns out that the fix wasn't actually fixing a
        real bug (since it's fine to use op_get_direct_pname on the wrong base because it has a
        structure check) and it was actually breaking the entire for-in optimization (since there is
        no way that we can statically prove that the base matches, because the base we see is a
        newly created temporary, and anyway doing it right would be really hard in our bytecode
        because it's 3AC form).
        
        But, I added a new test for the problem, and kept the original test. Both the old test and
        the new test prove that r172401 wasn't fixing what it thought it was fixing. To the extent
        that it resolved crashes it was because it just disabled the for-in optimization entirely.

        * bytecompiler/BytecodeGenerator.cpp:
        (JSC::BytecodeGenerator::emitGetByVal):
        (JSC::BytecodeGenerator::pushIndexedForInScope):
        (JSC::BytecodeGenerator::pushStructureForInScope):
        * bytecompiler/BytecodeGenerator.h:
        (JSC::ForInContext::ForInContext):
        (JSC::StructureForInContext::StructureForInContext):
        (JSC::IndexedForInContext::IndexedForInContext):
        (JSC::ForInContext::base): Deleted.
        * bytecompiler/NodesCodegen.cpp: